@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Fixed an OutOfMemory issue in PowerMockRunner (issue 346).
+* Added Sfl4jMockPolicy to the Mockito extension API, thanks to Alexandre Normand for the patch.
 
 Change log 1.4.10 (2011-08-23)
 ------------------------------
